--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=ASmTD9KvSepF8Mr7dKvFYJFlbQHBEld1lMSMyHFRouAAuBfx4tY1x9fMBuBP7buCTZa_Jou7xn7iiBbt&enable-funding=venmo&currency=USD"
+    data-sdk-integration-source="button-factory"
+  ></script>
 </html>
